botão de forçar atualização adicionado

--- a/app/assets/css/Panels/home.css
+++ b/app/assets/css/Panels/home.css
@@ -1,5 +1,6 @@
 @import "home/newsserver.css";
 @import "home/startgame.css";
+@import "home/forcegame.css";
 @import "home/statusserver.css";
 
 .overlay {
