--- a/app/assets/css/Panels/home/modpackserver.css
+++ b/app/assets/css/Panels/home/modpackserver.css
@@ -22,8 +22,13 @@
     border-radius: 20px;
 }
 
-.newsTitle {
+.Version {
     color: azure;
+    margin: 2%;
+}
+.Author {
+    color: azure;
+    margin: 2%;
 }
 .modpackName {
     text-align: center;
