--- a/app/assets/css/Panels/home/modpackserver.css
+++ b/app/assets/css/Panels/home/modpackserver.css
@@ -15,7 +15,13 @@
 .modpack-text {
     color: azure;
 }
+.splash-loading{
+    position: absolute;
+    text-align: center;
+    margin: 2%;
+    color: azure;
 
+}
 .container-modpacks {
     margin: 2%;
     background: #2b2b2b;
