--- a/app/assets/css/index.css
+++ b/app/assets/css/index.css
@@ -3,7 +3,7 @@
 	background-image: url("../images/background/background_dirt.png");
 	font-family: "Poppins";
 	 letter-spacing: 0px;
-	 color: white;
+	 color: black;
 	 -webkit-user-select: none;
 }
  .splash {
