--- a/app/assets/css/Panels/home.css
+++ b/app/assets/css/Panels/home.css
@@ -1,6 +1,7 @@
 @import "home/newsserver.css";
 @import "home/startgame.css";
 @import "home/modpackserver.css";
+@import "home/language.css";
 
 @import "home/forcegame.css";
 @import "home/statusserver.css";
