added server list

--- a/app/assets/css/Panels/home/modpackserver.css
+++ b/app/assets/css/Panels/home/modpackserver.css
@@ -39,6 +39,10 @@
 .modpackName {
     text-align: center;
 }
+.Status{
+    color: azure;
+    margin: 2%;
+}
 .modpackBody {
     color: azure;
     background: #3b3b3b;
