--- a/app/assets/css/Panels/home.css
+++ b/app/assets/css/Panels/home.css
@@ -28,8 +28,9 @@
 }
 
 .settings-btn {
-    position: absolute;
+    position: fixed;
     margin-top: 3.5%;
+    z-index: 10;
     margin-left: 87.5%;
     background: white;
     border: none;
