ready to next release

--- a/app/assets/css/index.css
+++ b/app/assets/css/index.css
@@ -84,6 +84,6 @@
 	 border-radius: 10px;
 }
  progress::-webkit-progress-value {
-	 background-color: rgb(255, 0, 0);
+	 background-color: #58993c;
 	 border-radius: 10px;
 }
